update priorite hero and overlap map

--- a/src/app/shared/component/carte/carte.component.html
+++ b/src/app/shared/component/carte/carte.component.html
@@ -16,7 +16,8 @@
             <div class='displayflex'>Actions restante:</div>
             <div *ngFor='let aventurier of aventuriers'>
                 <div class='displayflex'>
-                    <span>{{aventurier.nom}} : </span><span>{{aventurier.seqMouv}}</span>
+                    <span>{{aventurier.nom}} : {{aventurier.seqMouv}} direction:
+                        {{aventurier.orientation}} nbTresors : {{aventurier.tresorCollect}}</span>
                 </div>
             </div>
         </div>
