--- a/src/app/shared/component/carte/carte.component.html
+++ b/src/app/shared/component/carte/carte.component.html
@@ -7,8 +7,7 @@
 
 
             <div *ngFor='let case of x'>
-                <div class='case'> {{case.valeur}} </div>
-                <!--<app-case></app-case>-->
+                <div class='case'><span>{{case.valeur}}</span> <span class='numcase'>#{{case.numero}}</span> </div>
             </div>
             <br>
         </div>
