--- a/src/app/shared/component/carte/carte.component.scss
+++ b/src/app/shared/component/carte/carte.component.scss
@@ -5,8 +5,8 @@
 }
 
 .case {
-    width:50px;
-    height:50px;
+    width:70px;
+    height:70px;
     padding:25px;
     border: 1px solid;
     text-align: center;
@@ -21,4 +21,12 @@
 
 .margin {
     padding-bottom: 10px;
+}
+
+.numcase {
+    position: relative;
+    display: inline-block;
+    right: 39px;
+    bottom: 44px;
+    font-size:10px
 }
